--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>eu.skyrex</groupId>
-    <artifactId>Countdown-bot</artifactId>
+    <groupId>nl.gamehugo</groupId>
+    <artifactId>Christmas-bot</artifactId>
     <version>0.0.1</version>
 
     <properties>
